--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ document.getElementById("demo").innerHTML = y+"年"+m+"月"+date+"日";</script>
 	  </p>
       <ul>
 	  <span style="color:#555555;font-family:&quot;font-size:14px;letter-spacing:1px;white-space:normal;background-color:rgba(255, 255, 255, 0.9);">发现了一个免费的服务器
-此服务器提供商：<span style="font-size:16px;background-color:#337FE5;color:#CCCCCC;">阿贝云，网址：http://sanfengyun.com</span><br />主要的是这个服务器不错，速度大概在200以内,一键轻松安装任意操作系统,支持阿贝云，真的很实用（备案域名）；<br />
+此服务器提供商：<span style="font-size:16px;background-color:#337FE5;color:#CCCCCC;">阿贝云，网址：https://www.abeiyun.com</span><br />主要的是这个服务器不错，速度大概在200以内,一键轻松安装任意操作系统,支持阿贝云，真的很实用（备案域名）；<br />
 <span style="font-size:16px;">案例：</span><a href="http://cinema.xihale.top:81"><span style="font-size:16px;">xiaoxiog视频解析</span></a><span style="font-size:16px;">&nbsp; &nbsp;</span><a href="http://xihale.tk"><span style="font-size:16px;">xiaoxiog二</span><span style="font-size:16px;">级域名放送</span></a><br />
 </span><span style="color:#555555;font-family:&quot;font-size:14px;letter-spacing:1px;white-space:normal;background-color:rgba(255, 255, 255, 0.9);">图：</span><br />
 <img src="https://pic.imgdb.cn/item/611cda654907e2d39c925ce2.png" alt="" />	  	  <script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"16"},"share":{},"image":{"viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"16"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
