--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ style="font-size:16px;">xiaoxiog视频解析</span></a><span style="font-size:16
 spacing:1px;white-space:normal;background-color:rgba(255, 255, 255, 0.9);">图：</span><br 
 
 />
-<img src="https://pic.imgdb.cn/item/611e17b34907e2d39cc7af98.png" alt="" />	  	  
+<img src="https://s1.328888.xyz/2022/08/31/aCDwr.png" alt="" />	  	  
 
 <script>window._bd_share_config={"common":{"bdSnsKey":
 
