--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ style="font-size:16px;">xiaoxiog视频解析</span></a><span style="font-size:16
 spacing:1px;white-space:normal;background-color:rgba(255, 255, 255, 0.9);">图：</span><br 
 
 />
-<img src="https://cdn2.pandaimg.com/2022/10/18/634e54ce48e93.png" alt="" />	  	  
+<img src="https://s3.bmp.ovh/imgs/2022/11/02/005b17573d6d25d8.png" alt="" />	  	  
 
 <script>window._bd_share_config={"common":{"bdSnsKey":
 
